[package]
name = "janitor"
version = "0.1.0"
authors = ["sschiz <mcldresner@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.11", features = ["rt-threaded", "macros"] }
teloxide = "0.3"
teloxide-macros = "0.3"