[package]
name = "janitor"
version = "0.1.0"
authors = ["sschiz <mcldresner@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/sschiz/janitor-bot"
repository = "https://github.com/sschiz/janitor-bot"
description = """\
    This is a bot that removes users trying to join to a chat that is designed for comments.
"""
keywords = ["bot", "telegram", "janitor"]
categories = [
    "bot",
    "telegram-bot",
    "telegram",
]
edition = "2018"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.11", features = ["rt-threaded", "macros"] }
teloxide = "0.3"
teloxide-macros = "0.3"